backend/payment-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - port: 80
      targetPort: 8008
      protocol: TCP
  type: ClusterIP
