backend/payment-service/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-service
spec:
  podSelector:
    matchLabels:
      app: payment-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: amazon-clone
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: amazon-clone
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
